<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anchalshukla.cricketscore.Main4Activity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/download" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="243dp"
        android:layout_height="90dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="255dp"
            android:layout_height="45dp"
            android:text="@string/win"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="24sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="185dp"
        android:layout_height="41dp"


        android:layout_marginTop="32dp"
        android:text="@string/runs"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="185dp"
        android:layout_height="41dp"

        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:layout_marginRight="16dp" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="185dp"
        android:layout_height="41dp"


        android:layout_marginTop="32dp"
        android:text="@string/balls"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="185dp"
        android:layout_height="41dp"

        android:layout_marginRight="16dp"

        android:layout_marginTop="32dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="185dp"
        android:layout_height="41dp"


        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:text="@string/runs"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="185dp"
        android:layout_height="41dp"

        android:layout_marginBottom="32dp"
        android:layout_marginRight="16dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="185dp"
        android:layout_height="41dp"


        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:text="@string/balls"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="185dp"
        android:layout_height="41dp"

        android:layout_marginBottom="32dp"

        android:layout_marginRight="16dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="243dp"
        android:layout_height="90dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="255dp"
            android:layout_height="45dp"
            android:text="@string/sec"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginBottom="176dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/download1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="50dp"
        android:layout_marginTop="263dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@string/mes"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="36sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
